# Grit

./: README.md
libgrit/: .gitignore  BuildConfig.h.in  CMakeLists.txt
